--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
 body {
-  background-color: brown;
+  background-color: tan;
   font-size: 2em;
+  margin: 0 auto;
+}
+h3 {
+  color: red;
+}
+p {
+  color: black;
 }
